# Image-Processor

./: CMakeLists.txt  filter.cpp  filter.h  image.cpp  image.h  main.cpp
